--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -115,10 +115,17 @@ jobs:
     needs: build
     uses: ./.github/workflows/package.yml
 
+  virus-scan:
+    name: VirusTotal Scan
+    needs: package
+    uses: ./.github/workflows/virus-scan.yml
+    secrets:
+      VT_API_KEY: ${{ secrets.VT_API_KEY }}
+
   comment:
     name: PR Comment
     runs-on: ubuntu-latest
-    needs: [build, package]
+    needs: [build, package, virus-scan]
     if: github.event_name == 'pull_request'
     permissions:
       pull-requests: write
@@ -128,6 +135,7 @@ jobs:
         with:
           script: |
             const runUrl = `${context.serverUrl}/${context.repo.owner}/${context.repo.repo}/actions/runs/${context.runId}`;
+            const scanResults = `${{ needs.virus-scan.outputs.scan_results }}`;
             const body = `## Build Artifacts
 
             The CI build completed successfully. Download artifacts from the [workflow run](${runUrl}).
@@ -147,6 +155,9 @@ jobs:
             | macOS (Apple Silicon) | \`GoTune-macOS-arm64.zip\` |
             | Linux | \`GoTune-linux-amd64.tar.xz\` |
             | Windows | \`GoTune-windows-amd64.zip\` |
+
+            ### Security Scan Results
+            ${scanResults}
 
             > Artifacts expire after 7 days.`;
 
